--- a/app/components/ui/header/header.module.scss
+++ b/app/components/ui/header/header.module.scss
@@ -1,7 +1,7 @@
 .header {
-  @apply absolute top-0 left-0 px-8  right-0 py-2  flex gap-16 items-center;
+  @apply absolute top-0 left-0 sm:px-8 px-4   right-0 py-2  flex sm:gap-16 gap-4 items-center justify-between;
   nav {
-    @apply flex w-full justify-between;
+    @apply lg:flex w-full justify-between invisible hidden  lg:visible;
     ul {
       @apply flex text-white  gap-4;
 
