--- a/app/components/landing/banner.module.scss
+++ b/app/components/landing/banner.module.scss
@@ -1,15 +1,15 @@
 .banner {
-  @apply bg-red  pt-20 md:px-20 px-5 h-full w-full gap-10 flex h-full flex-col  justify-between;
+  @apply bg-red   pt-20 h-full w-full gap-10 flex flex-col  justify-between;
   min-height: 100vh;
 
 
   h1 {
-    @apply md:text-9xl sm:text-7xl md:text-left text-center text-6xl mt-10 text-gold lobster;
+    @apply md:text-9xl sm:text-7xl text-5xl md:text-left text-center  mt-2 text-gold lobster;
     line-height: 0.78;
   }
 
   .start {
-    @apply text-3xl font-bold bg-green transition-all justify-center items-center flex w-96 gap-4 text-white px-4 py-8;
+    @apply md:text-3xl text-xl font-bold bg-green transition-all justify-center items-center flex sm:w-96 w-full gap-4 text-white px-4 md:py-8 py-4 ;
     border-radius: 0 75px;
 
     &:hover {
@@ -18,13 +18,13 @@
   }
 
   .prize {
-    @apply text-white text-center text-5xl font-bold px-10 py-8;
+    @apply text-white text-center md:text-5xl text-3xl font-bold md:px-10 md:py-8 px-5 py-4;
     border-radius: 0 100px;
     border: 4px solid #F5D858;
   }
 
   p {
-    @apply text-white text-2xl text-center font-bold;
+    @apply text-white md:text-2xl text-xl text-center font-bold;
   }
 
   .prizes{
@@ -44,12 +44,15 @@
   .main {
     @apply flex flex-wrap md:flex-nowrap h-full;
     .left{
-      @apply h-full lg:w-[60%] w-full  flex flex-col gap-10;
+      @apply h-full lg:w-[60%]  md:px-20 px-5 flex flex-col gap-10;
     }
     .right {
-      @apply relative lg:w-[40%] w-full ;
+      @apply  lg:w-[40%] flex justify-end;
+      .img{
+        @apply w-full self-end ;
+      }
       .img1 {
-        @apply md:absolute right-[5%] bottom-10 md:w-[80%] w-[100%] ;
+        @apply md:absolute right-[5%] bottom-0 md:w-[80%] w-[100%] ;
         filter: drop-shadow(0 0 10rem white);
         //animation: shake 27s infinite;
       }
