--- a/app/components/landing/faqs.module.scss
+++ b/app/components/landing/faqs.module.scss
@@ -1,6 +1,6 @@
 .faqs{
   @apply bg-gray-900 pb-20 w-full;
   h2{
-    @apply lobster text-7xl my-10 text-center text-gold;
+    @apply lobster lg:text-7xl md:text-5xl text-3xl my-10 text-center text-gold;
   }
 }
