--- a/app/components/landing/winners/winners.module.scss
+++ b/app/components/landing/winners/winners.module.scss
@@ -3,4 +3,45 @@
   h2{
     @apply lobster lg:text-7xl md:text-5xl text-3xl my-10 text-center text-gold;
   }
+  .wrapper{
+    @apply container m-auto my-5;
+    .block{
+      @apply w-full  bg-green px-20 py-10;
+
+      .tabs{
+        @apply flex gap-8;
+        button{
+          @apply text-xl text-white  transition-all;
+          &.active{
+            @apply text-gold;
+          }
+        }
+      }
+      .dates{
+        @apply flex  justify-between pr-8  my-4 gap-4;
+        button{
+          @apply  text-white transition-all;
+          &.active{
+            @apply text-gold;
+          }
+        }
+      }
+      table{
+        @apply border border-white w-full my-5 text-white;
+        thead{
+          th{
+            @apply py-2 uppercase border-white border-b text-gold;
+          }
+        }
+        tbody{
+          tr{
+            @apply border-white border-b;
+            td{
+              @apply px-4 py-2;
+            }
+          }
+        }
+      }
+    }
+  }
 }
