--- a/app/components/landing/winners/winners.module.scss
+++ b/app/components/landing/winners/winners.module.scss
@@ -1,5 +1,5 @@
 .winners{
-  @apply bg-red w-full;
+  @apply bg-red pt-20  w-full;
   h2{
     @apply lobster lg:text-7xl md:text-5xl text-3xl my-10 text-center text-gold;
   }
