--- a/app/components/landing/faq/faqs.module.scss
+++ b/app/components/landing/faq/faqs.module.scss
@@ -1,5 +1,5 @@
 .faqs{
-  @apply bg-gray-900 pb-20 w-full;
+  @apply bg-gray-900 pt-20  pb-20 w-full;
   h2{
     @apply lobster lg:text-7xl md:text-5xl text-3xl my-10 text-center text-gold;
   }
