--- a/app/components/landing/partners/partners.module.scss
+++ b/app/components/landing/partners/partners.module.scss
@@ -1,22 +1,22 @@
 .partners{
-  @apply bg-gray-900 relative overflow-hidden pt-20  pb-60 w-full;
+  @apply bg-gray-900 relative overflow-hidden md:pt-20 pt-5  md:pb-60 pb-16 w-full;
   h2{
-    @apply lobster lg:text-7xl md:text-5xl text-3xl my-10 text-center text-gold;
+    @apply lobster z-40 lg:text-7xl md:text-5xl text-3xl my-10 text-center text-gold;
   }
   .img1{
-    @apply absolute top-10 left-[-100px] md:z-40 w-80;
+    @apply absolute top-10 left-[-30px] md:left-[-100px] md:z-30 md:w-80 w-20;
     animation: 12s shake infinite;
   }
   .img2{
-    @apply absolute top-10 right-[-100px] md:z-40 w-80;
+    @apply absolute top-10  right-[-10px] md:right-[-100px] md:z-30 md:w-80  w-20;
     animation: 14s shake infinite;
   }
   .img3{
-    @apply absolute rotate-3 bottom-0 right-[-80px] md:z-40 w-96;
+    @apply absolute rotate-3 bottom-0 md:right-[-80px] md:z-30 md:w-96  w-12;
     animation: 20s shake2 infinite;
   }
   .img4{
-    @apply absolute  bottom-0 left-[-100px] md:z-40 w-96;
+    @apply absolute  bottom-0 md:left-[-100px] md:z-30 md:w-96  w-12;
     animation: 25s shake2 infinite;
   }
 }
