--- a/app/components/modals/modal.module.scss
+++ b/app/components/modals/modal.module.scss
@@ -1,6 +1,7 @@
 .modalWrapper {
-  @apply  absolute overflow-hidden h-[100vh] w-[100vw] top-0 right-0 left-0 bottom-0 flex justify-center items-center px-2 bg-black
+  @apply  fixed overflow-hidden h-[100vh]  w-[100vw] top-0 right-0 left-0 bottom-0 flex justify-center items-center px-2 bg-black
   bg-opacity-80 z-60;
+  overflow-y: hidden;
   .modal {
     @apply md:figure-border  top-0 right-0 left-0 bottom-0  text-white bg-green md:w-96  md:p-8 p-4 text-sm  flex-center-between flex-col gap-6;
   }
