--- a/app/components/modals/modal.module.scss
+++ b/app/components/modals/modal.module.scss
@@ -8,7 +8,7 @@
 }
 
 .btnGold {
-  @apply bg-gold px-4 py-2  text-black text-center w-full;
+  @apply bg-gold px-4 py-2 mb-0  text-black text-center w-full;
   border-radius: 0px 25px;
 
 }
