--- a/app/(pages)/loading.module.scss
+++ b/app/(pages)/loading.module.scss
@@ -1,5 +1,5 @@
 .loader {
-  color: steelblue;
+  color: white;
   position: absolute;
   top: calc(50% - 50px);
   left: calc(50% - 50px);
@@ -26,21 +26,21 @@
       left: 0;
       top: 0;
       animation: rotate-one 1s linear infinite;
-      border-bottom: 3px solid steelblue;
+      border-bottom: 3px solid white;
     }
 
     &.two {
       right: 0;
       top: 0;
       animation: rotate-two 1s linear infinite;
-      border-right: 3px solid steelblue;
+      border-right: 3px solid white;
     }
 
     &.three {
       right: 0;
       bottom: 0;
       animation: rotate-three 1s linear infinite;
-      border-top: 3px solid steelblue;
+      border-top: 3px solid white;
     }
 
   }
