--- a/app/(pages)/game/layout.module.scss
+++ b/app/(pages)/game/layout.module.scss
@@ -1,21 +1,23 @@
 .img1{
-  @apply absolute top-10 left-[-30px] md:left-[-100px] md:z-30 md:w-80 w-20;
-  animation: 12s shake infinite;
+  @apply absolute top-1/3 rotate-[15deg]  md:right-[-20px] md:z-30 md:w-80 lg:w-full w-20;
+  //animation: 12s shake infinite;
 }
 .img2{
-  @apply absolute top-10  right-[-10px] md:right-[-100px] md:z-30 md:w-80  w-20;
-  animation: 14s shake infinite;
+  @apply absolute top-10  right-[-10px] md:right-[-100px] md:z-30 md:w-80  w-20 ;
+  animation: 34s shake infinite;
 }
 .img3{
-  @apply absolute rotate-3 bottom-0 md:right-[-80px] md:z-30 md:w-96  w-12;
-  animation: 20s shake2 infinite;
+  @apply absolute  top-[-20px] md:left-[-80px] lg:left-[-180px] md:z-30 md:w-96  lg:w-full w-12 rotate-[-40deg];
+  //animation: 20s shake2 infinite;
 }
 .img4{
   @apply absolute  bottom-0 md:left-[-100px] md:z-30 md:w-96  w-12;
   animation: 25s shake2 infinite;
 }
 
-
+.img5{
+  //animation: 25s shake infinite;
+}
 
 @keyframes shake {
   0% {
