--- a/app/(pages)/game/layout.module.scss
+++ b/app/(pages)/game/layout.module.scss
@@ -1,5 +1,5 @@
 .img1{
-  @apply absolute top-1/3 rotate-[15deg]  md:right-[-20px] md:z-30 md:w-80 lg:w-full w-20;
+  @apply absolute top-2/4 rotate-[15deg]  md:left-[-120px] md:z-30 md:w-80 lg:w-full w-20;
   //animation: 12s shake infinite;
 }
 .img2{
@@ -16,6 +16,8 @@
 }
 
 .img5{
+  @apply h-full aspect-auto;
+  transform: translateX(100px);
   //animation: 25s shake infinite;
 }
 
