--- a/app/components/ui/question/question.module.scss
+++ b/app/components/ui/question/question.module.scss
@@ -3,21 +3,21 @@
   h2{
     @apply text-gold lobster my-4 md:text-7xl text-5xl text-center
   }
-  .time{
+  .timer{
     @apply text-white text-center font-bold text-xl;
     .seconds{
-      @apply inline-block w-28 text-left;
+      @apply inline-block w-20 text-left;
     }
   }
   .q{
-    @apply z-10 relative  bg-green p-8 my-6 text-center text-lg  figure-border;
+    @apply z-10 relative  bg-green leading-6 md:leading-8 py-6 p-4 md:p-6 lg:p-8 my-6 text-center text-lg  figure-border;
   }
   .answers{
-    @apply grid grid-cols-2 gap-8 ;
+    @apply grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4 ;
     .a{
-      @apply z-40 border-2 border-gold p-4 text-xl font-medium text-center transition-all figure-border;
+      @apply z-40 border-2 leading-5 md:leading-6 flex justify-center items-center border-gold p-4 md:text-xl text-xl font-medium text-center transition-all figure-border;
       &:hover{
-        @apply bg-gold  shadow shadow-white text-red
+        @apply bg-gold cursor-pointer shadow shadow-white text-red
       }
 
       &.active{
@@ -38,19 +38,19 @@
   .buttons{
     @apply my-4;
     button{
-      @apply transition-all z-40 relative  w-full my-4 border-2 border-transparent h-20 p-4 figure-border text-2xl;
+      @apply transition-all  z-40 relative  w-full md:my-4 my-2 border-2 border-transparent md:h-20 h-16 md:p-4 figure-border text-xl md:text-2xl;
       &:hover{
-        @apply bg-gold  shadow-lg shadow-red text-red
+        @apply bg-gold  shadow-lg shadow-red text-red cursor-pointer
       }
       strong{
-        @apply  text-lg block text-center;
+        @apply  text-sm md:text-lg block leading-4 text-center;
       }
       span{
-        @apply text-sm block text-center;
+        @apply text-xs md:text-sm block text-center;
       }
     }
     .enter{
-      @apply text-3xl font-bold text-black bg-gold;
+      @apply md:text-3xl text-xl font-bold text-black bg-gold;
     }
     .disabled{
       @apply bg-gray-500 ;
