--- a/app/components/landing/banner/banner.module.scss
+++ b/app/components/landing/banner/banner.module.scss
@@ -9,7 +9,7 @@
   }
 
   .start {
-    @apply md:text-3xl text-xl font-bold bg-green transition-all justify-center items-center flex sm:w-96 w-full gap-4 text-white px-4 md:py-8 py-4 ;
+    @apply md:text-3xl cursor-pointer text-xl font-bold bg-green transition-all justify-center items-center flex sm:w-96 w-full gap-4 text-white px-4 md:py-8 py-4 ;
     border-radius: 0 75px;
 
     &:hover {
