--- a/app/components/ui/header/header.module.scss
+++ b/app/components/ui/header/header.module.scss
@@ -6,8 +6,8 @@
       @apply flex text-white  gap-4;
 
     }
-    .tel{
-      @apply flex gap-2 text-white;
-    }
+
   }
-}
+}    .tel{
+       @apply flex gap-2 items-center text-white;
+     }
