--- a/app/components/ui/question/question.module.scss
+++ b/app/components/ui/question/question.module.scss
@@ -26,6 +26,9 @@
           @apply text-white;
         }
       }
+      &.inactive{
+        @apply bg-gray-500 border-gray-500;
+      }
       &.true{
         @apply bg-green
       }
