--- a/app/components/landing/winners/winners.module.scss
+++ b/app/components/landing/winners/winners.module.scss
@@ -1,5 +1,7 @@
 .winners{
-  @apply bg-red pt-20  w-full;
+  @apply  pt-20  w-full;
+  background:  no-repeat top right url("/images/balls.png"), no-repeat bottom left url("/images/elka.png");
+  background-color: #A42222;
   h2{
     @apply lobster lg:text-7xl md:text-5xl text-3xl my-10 text-center text-gold;
   }
