--- a/app/components/ui/question/question.module.scss
+++ b/app/components/ui/question/question.module.scss
@@ -1,7 +1,7 @@
 .question{
   @apply text-white p-2 md:p-4 lg:p-6 w-full;
   h2{
-    @apply text-gold lobster my-4 md:text-7xl text-5xl text-center
+    @apply text-gold lobster md:mt-4 md:text-7xl mt-2 text-5xl text-center
   }
   .timer{
     @apply text-white text-center font-bold text-xl;
@@ -10,7 +10,7 @@
     }
   }
   .q{
-    @apply z-10 relative  bg-green leading-6 md:leading-8 py-6 p-4 md:p-6 lg:p-8 my-6 text-center text-lg  figure-border;
+    @apply z-10 relative  bg-green leading-6 md:leading-8 py-6 p-4 md:p-6 lg:p-8 md:my-6 my-4 text-center text-lg  figure-border;
   }
   .answers{
     @apply grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4 ;
@@ -27,7 +27,8 @@
         }
       }
       &.inactive{
-        @apply bg-gray-500 border-gray-500;
+
+        @apply text-gray-500 bg-gray-500 border-gray-500;
       }
       &.true{
         @apply bg-green
@@ -41,7 +42,7 @@
   .buttons{
     @apply my-4;
     button{
-      @apply transition-all  z-40 relative  w-full md:my-4 my-2 border-2 border-transparent md:h-20 h-16 md:p-4 figure-border text-xl md:text-2xl;
+      @apply transition-all  z-40 relative  w-full md:my-4 my-2 border-2 border-transparent md:h-20 h-14 md:p-4 figure-border text-xl md:text-2xl;
       &:hover{
         @apply bg-gold  shadow-lg shadow-red text-red cursor-pointer
       }
@@ -56,7 +57,8 @@
       @apply md:text-3xl text-xl font-bold text-black bg-gold;
     }
     .disabled{
-      @apply bg-gray-500 ;
+
+      @apply  bg-gray-500 ;
     }
 
     .time{ @apply bg-[#1487A2]; }
