--- a/app/assets/loading.module.scss
+++ b/app/assets/loading.module.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;900&family=Lobster&display=swap');
 .loader {
   //background: red;
   //border: 2px solid gold;
