--- a/app/(pages)/game/win/win.module.scss
+++ b/app/(pages)/game/win/win.module.scss
@@ -62,9 +62,25 @@
 
 
   }
+.buttons{
+  @apply grid md:grid-cols-2 grid-cols-1 items-center md:my-4 my-2 md:gap-6 gap-2;
+
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
+  transform: translateY(-100%);
+  animation: slideIn 1s ease-in-out 3s forwards;
 }
 
+}
 
+@keyframes slideIn {
+  to {
+    opacity: 1;
+    height: 150px;
+    transform: translateY(0);
+  }
+}
 @keyframes bounce {
   0% {
     transform: rotate(0deg);
