--- a/app/(pages)/game/(buttons)/buttons.module.scss
+++ b/app/(pages)/game/(buttons)/buttons.module.scss
@@ -1,26 +1,26 @@
 .bonusButton{
-  @apply cursor-pointer transition-all text-xl  relative text-center text-lg w-full   figure-border p-4 bg-[#1487A2] text-white;
+  @apply cursor-pointer transition-all text-xl  relative text-center text-lg w-full   figure-border md:p-4 p-2 bg-[#1487A2] text-white;
   &:hover{
     @apply shadow-lg shadow-red;
   }
 }
 
 .playButton{
-  @apply cursor-pointer transition-all text-xl  text-black relative text-center text-lg w-full   figure-border p-4 bg-gold;
+  @apply cursor-pointer transition-all text-xl  text-black relative text-center text-lg w-full   figure-border md:p-4 p-2 bg-gold;
   &:hover{
     @apply shadow-lg shadow-red;
   }
 }
 
 .endGameButton{
-  @apply cursor-pointer transition-all text-xl  relative bg-red text-white text-center text-lg w-full   figure-border p-4;
+  @apply cursor-pointer transition-all text-xl  relative bg-red text-white text-center text-lg w-full   figure-border md:p-4 p-2;
   &:hover{
     @apply shadow-lg shadow-red;
   }
 }
 
 .shareButton{
-  @apply cursor-pointer transition-all text-xl  relative bg-red text-white text-center text-lg w-full   figure-border p-4;
+  @apply cursor-pointer transition-all text-xl  relative bg-red text-white text-center text-lg w-full   figure-border md:p-4 p-2;
   &:hover{
     @apply shadow-lg shadow-red;
   }
