--- a/app/assets/globals.css
+++ b/app/assets/globals.css
@@ -29,4 +29,5 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  background-image: url("/back.png");
 }
