--- a/app/components/landing/banner/banner.module.scss
+++ b/app/components/landing/banner/banner.module.scss
@@ -1,12 +1,12 @@
 .banner {
-  @apply bg-red   pt-20 h-full w-full gap-10 flex flex-col  justify-between;
+  @apply bg-red   pt-20 h-full w-full md:gap-10 gap-4 flex flex-col  justify-between;
   min-height: 100vh;
 
 
-
   .start {
-    @apply md:text-3xl cursor-pointer text-xl font-bold bg-green transition-all justify-center items-center flex sm:w-96 w-full gap-4 text-white px-4 md:py-8 py-4 ;
+    @apply md:text-3xl cursor-pointer text-xl font-bold bg-green transition-all justify-center items-center flex sm:w-96 w-full md:gap-4 gap-2 text-white px-4 md:py-8 py-4 ;
     border-radius: 0 75px;
+
 
     &:hover {
       @apply shadow-gold text-gold gap-4;
@@ -24,7 +24,7 @@
   }
 
   .prizes{
-    @apply flex grow-0 flex-wrap gap-2 md:flex-nowrap shrink-0 pb-10;
+    @apply flex grow-0 flex-wrap gap-2 md:flex-nowrap shrink-0 pb-2;
    div{
       @apply text-white py-2 px-4 w-full flex flex-col justify-center;
       border-radius: 0 70px;
@@ -40,10 +40,10 @@
   .main {
     @apply flex flex-wrap md:flex-nowrap h-full;
     .left{
-      @apply h-full lg:w-[60%]  md:px-20 px-5 flex flex-col gap-10;
+      @apply h-full lg:w-[60%]  md:px-20 px-5 flex flex-col md:gap-10 gap-4;
 
       h1 {
-        @apply md:text-9xl sm:text-7xl text-5xl md:text-left text-center  mt-2 text-gold lobster;
+        @apply md:text-9xl sm:text-7xl text-5xl md:text-left text-center mt-0  mt-2 text-gold lobster;
         line-height: 0.78;
       }
     }
