--- a/app/components/modals/modal.module.scss
+++ b/app/components/modals/modal.module.scss
@@ -24,7 +24,7 @@
       }
       //для отображения ошибок
       span{
-        @apply pl-4 text-sm text-[#FF2626];
+        @apply pl-4 text-sm text-center  text-[#FF2626];
       }
     }
 
